# experimental_ex_libp2p

./: .credo.exs  .formatter.exs  .gitignore  ARCHDO_REVIEW.md  ARCHITECTURE.md  CONTINUE_ARCHDO.md  DESIGN_DECISIONS.md  LICENSE  README.md  mix.exs
.github/workflows/: ci.yml  precompile.yml
config/: config.exs  test.exs
lib/: ex_libp2p.ex
lib/ex_libp2p/: application.ex  call.ex  dht.ex  discovery.ex  gossipsub.ex  health.ex  keypair.ex  metrics.ex  multiaddr.ex  native.ex  node.ex  peer_id.ex  relay.ex  rendezvous.ex  request_response.ex  telemetry.ex
lib/ex_libp2p/gossipsub/: peer_score.ex
lib/ex_libp2p/native/: core.ex  dht.ex  keypair.ex  metrics.ex  mock.ex  nif.ex  pubsub.ex  relay.ex  rendezvous.ex  rpc.ex
native/ex_libp2p_nif/: Cargo.toml
native/ex_libp2p_nif/src/: atoms.rs  behaviour.rs  commands.rs  config.rs  events.rs  lib.rs  node.rs
test/: ex_libp2p_test.exs
test/ex_libp2p/: dht_test.exs  discovery_test.exs  gossipsub_test.exs  health_test.exs  keypair_test.exs  metrics_test.exs  multiaddr_test.exs  node_test.exs  peer_id_test.exs  relay_test.exs  rendezvous_test.exs  request_response_test.exs  telemetry_test.exs
test/integration/: capacity_test.exs  connectivity_test.exs  dht_test.exs  discovery_test.exs  gossipsub_advanced_test.exs  gossipsub_test.exs  keypair_test.exs  mdns_discovery_test.exs  metrics_test.exs  node_lifecycle_test.exs  panic_safety_test.exs  relay_test.exs  rendezvous_test.exs  request_response_test.exs  security_test.exs  soak_test.exs  stress_test.exs
test/support/: nif_case.ex  test_messages.ex
(+11 files in other folders)
